added a testimonial and alt text for images

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                 <a href="#writing" title="Writing">Writing</a>
                 <a href="#music" title="Music">Music</a>
                 <a href="#volunteering" title="Volunteering">Volunteering</a>
-                <a href="#reviews" title="Reviews">Reviews</a>
+                <a href="#testimonials" title="Testimonials">Testimonials</a>
             </div>
             <div id="social-links">
                 <a href="https://linktr.ee/soundslikesequoia" target="_blank" title="Music Linktree">
@@ -149,26 +149,26 @@
         <article>
             <h3>Ideation</h3>
             <h6>Seeking inspiration, collecting resources, and sketching initial ideas helps to get started on a task.</h6>
-            <img src="images/ideation-1.jpeg" alt=""/>
-            <img src="images/ideation-2.png" alt=""/>
+            <img src="images/ideation-1.jpeg" alt="Sketchbook drawing of a user interface wireframe."/>
+            <img src="images/ideation-2.png" alt="Moodboard of web software navigational examples."/>
         </article>
         <article>
             <h3>Research</h3>
             <h6>Understanding a problem is always key to finding the right solution to a problem.</h6>
-            <img src="images/research-1.jpg" alt=""/>
-            <img src="images/research-2.png" alt=""/>
+            <img src="images/research-1.jpg" alt="Me, standing in a room with others, conducting a card sorting design exercise."/>
+            <img src="images/research-2.png" alt="Table with small paper rectangles including typed writing on them, sorted into groups."/>
         </article>
         <article>
             <h3>Workflow</h3>
             <h6>Creating a visual workflow map ensures cohesion between everybody involved.</h6>
-            <img src="images/workflow-1.png" alt=""/>
+            <img src="images/workflow-1.png" alt="Digitally created user flow map with white and grey boxes to represent pages of a mobile application."/>
         </article>
         <article>
             <h3>Wireframe</h3>
             <h6>Getting started on visuals in a lower fidelity state helps guide initial user testing and inform design decisions.</h6>
-            <img src="images/wireframe-1.jpg" alt=""/>
-            <img src="images/wireframe-2.jpg" alt=""/>
-            <!-- <img src="images/wireframe-3.jpg" alt=""/> -->
+            <img src="images/wireframe-1.jpg" alt="Low fidelity design of a web navgiation interface with annotated labels."/>
+            <img src="images/wireframe-2.jpg" alt="Low fidelity design of a web navgiation interface with annotated labels."/>
+            <!-- <img src="images/wireframe-3.jpg" alt="Low fidelity design of a web navgiation interface with annotated labels."/> -->
         </article>
         <article>
             <h3>Prototype</h3>
@@ -178,22 +178,22 @@
         <article>
             <h3>Animation</h3>
             <h6>Creating motion designs is a great way to share specific interactions and animations with engineers.</h6>
-            <img src="images/animation-1.gif" alt=""/>
-            <img src="images/animation-2.gif" alt=""/>
+            <img src="images/animation-1.gif" alt="Animation of a stepped sequence moving from first to second step using a line and circle as a highlight."/>
+            <img src="images/animation-2.gif" alt="Animation of a floating mobile interface in low fidelity, with boxes moving around."/>
             <!-- <img src="images/animation-3.gif" alt=""/> -->
         </article>
         <article>
             <h3>Design Systems</h3>
             <h6>Building design systems is always an important part of the process to help create consistency and cohesion between all parts of a team and project.</h6>
-            <img src="images/designsystem-1.gif" alt=""/>
-            <img src="images/designsystem-2.gif" alt=""/>
-            <img src="images/designsystem-3.gif" alt=""/>
+            <img src="images/designsystem-1.gif" alt="Screen recording of the interaction building a layout of an input field component for a form using Figma assets."/>
+            <img src="images/designsystem-2.gif" alt="Screen recording of the interaction searching for a primary icon button component using Figma assets."/>
+            <img src="images/designsystem-3.gif" alt="Screen recording of the interaction altering a page alert component using Figma assets."/>
         </article>
         <article>
             <h3>High-Fidelity</h3>
             <h6>Designing detail-oriented interfaces including interactive states enables team members to find clarity in how something should look and feel.</h6>
-            <img src="images/hifi-1.png" alt=""/>
-            <img src="images/hifi-2.png" alt=""/>
+            <img src="images/hifi-1.png" alt="High fidelity design mockup of different buttons, controls, and interactions."/>
+            <img src="images/hifi-2.png" alt="High fidelity design of a financial management website."/>
         </article>
         <article>
             <h3>Promotion</h3>
@@ -203,7 +203,7 @@
         <article>
             <h3>Measurement</h3>
             <h6>Setting goals and measuring success guides the reflection of a project both backward and forward.</h6>
-            <img src="images/measurement-1.png" alt=""/>
+            <img src="images/measurement-1.png" alt="Screenshot of a table and line chart in Google Analytics."/>
         </article>
     </section>
 
@@ -285,11 +285,15 @@
         </article>
     </section>
 
-    <h2 id="reviews">Reviews —</h2>
+    <h2 id="testimonials">Testimonials —</h2>
     <section id="section-reviews">
         <article>
             <p>"Derek is an amazing mentor! He is so easy to talk to and you learn so much from just chatting with him. He explains design concepts clearly and understands the best practices of the industry. His perspectives, view of the world, and ideas will enlighten and inspire you. I'm so thankful to have met Derek and found someone who is so senior in design treat me with the utmost respect and be so reliable. Whether it's answering a tough situational question to preparing you for an interview, Derek is so responsive and knowledgeable about what to expect. Incredibly talented and communicative, Derek is a great person to work with and learn from."</p>
             <h6>Catherine R-K., Mentee</h6>
+        </article>
+        <article>
+            <p>"Derek is one of the most passionate, hardworking people I've ever met. You can tell that he loves what he does because there is always something meaningful attached to his projects. Working with him is super beneficial—he will recognize your strengths even if you don't realize them yourself. His dedication to his craft is inspiring and I'm glad that I got the chance to work alongside him!"</p>
+            <h6>Halimatu B., Coworker (Engineer)</h6>
         </article>
     </section>
 
