--- a/index.html
+++ b/index.html
@@ -295,6 +295,26 @@
             <p>"Derek is one of the most passionate, hardworking people I've ever met. You can tell that he loves what he does because there is always something meaningful attached to his projects. Working with him is super beneficial—he will recognize your strengths even if you don't realize them yourself. His dedication to his craft is inspiring and I'm glad that I got the chance to work alongside him!"</p>
             <h6>Halimatu B., Coworker (Engineer)</h6>
         </article>
+        <article>
+            <p>"Derek and I work together as volunteers on a project to help people experiencing homelessness. We encountered challenges that required not only Derek’s compassion but also his professional expertise.  His creative ideas and technical skill were critical to improving our service, but even more valuable was his capacity to work collaboratively with untutored volunteers as equal, respected partners.  It is the same respect, attention, and concern he shows to people in need.  He is, in short, a joy to have as a colleague."</p>
+            <h6>Janet B., Covolunteer Leader</h6>
+        </article>
+        <!-- <article>
+            <p>""</p>
+            <h6>Mridhula S., Coworker (Product Manager)</h6>
+        </article>
+        <article>
+            <p>""</p>
+            <h6>June S., Band Leader</h6>
+        </article>
+        <article>
+            <p>""</p>
+            <h6>Justin G., Mentor</h6>
+        </article>
+        <article>
+            <p>""</p>
+            <h6>Jonathon W., Coworker (Designer)</h6>
+        </article> -->
     </section>
 
     <h2 id="portfolio-archive">Portfolio Archive —</h2>
