--- a/index.html
+++ b/index.html
@@ -299,19 +299,19 @@
             <p>"Derek and I work together as volunteers on a project to help people experiencing homelessness. We encountered challenges that required not only Derek’s compassion but also his professional expertise. His creative ideas and technical skill were critical to improving our service, but even more valuable was his capacity to work collaboratively with untutored volunteers as equal, respected partners. It is the same respect, attention, and concern he shows to people in need. He is, in short, a joy to have as a colleague."</p>
             <h6>Janet B., Covolunteer Leader</h6>
         </article>
-        <!-- <article>
-            <p>""</p>
+        <article>
+            <p>"I have been working with Derek for approximately a year now. I have found Derek to be great at taking an abstract UI requirement, asking the right questions, and coming up with a UI that meets the product requirements. When designing the UI, Derek not only considers the requirements that we have provided but also thinks about how to provide a better user experience. And finally, comes up with a UI  that is better designed/placed than what I initially conceived of. I have also found that he is open to suggestions, carefully listens to feedback and incorporates the feedback. It has been a great pleasure to work with Derek, and he has become my go-to person for all UI requirements for my projects."</p>
             <h6>Mridhula S., Coworker (Product Manager)</h6>
         </article>
-        <article>
+        <!-- <article>
             <p>""</p>
             <h6>June S., Band Leader</h6>
-        </article>
-        <article>
+        </article> -->
+        <!-- <article>
             <p>""</p>
             <h6>Justin G., Mentor</h6>
-        </article>
-        <article>
+        </article> -->
+        <!-- <article>
             <p>""</p>
             <h6>Jonathon W., Coworker (Designer)</h6>
         </article> -->
