altered some styles

--- a/index.html
+++ b/index.html
@@ -281,7 +281,7 @@
             <p>Designing Systems with Others, NOVA UX, 2019</p>
             <p>Animating SVG, Hackital, 2017</p>
             <p>Design Disrupters Representative, Washington, DC, 2016</p>
-            <p>Humor in Design, Maryland Institute Colleg of Art, 2011</p>
+            <p>Humor in Design, Maryland Institute College of Art, 2011</p>
         </article>
     </section>
 
