--- a/index.html
+++ b/index.html
@@ -303,6 +303,10 @@
             <p>"I have been working with Derek for approximately a year now. I have found Derek to be great at taking an abstract UI requirement, asking the right questions, and coming up with a UI that meets the product requirements. When designing the UI, Derek not only considers the requirements that we have provided but also thinks about how to provide a better user experience. And finally, comes up with a UI  that is better designed/placed than what I initially conceived of. I have also found that he is open to suggestions, carefully listens to feedback and incorporates the feedback. It has been a great pleasure to work with Derek, and he has become my go-to person for all UI requirements for my projects."</p>
             <h6>Mridhula S., Coworker (Product Manager)</h6>
         </article>
+        <article>
+            <p>"Derek's enthusiasm and skill really raised the bar for design at Oracle Data Cloud. He's a fantastic designer and great relationship builder across the organization. On top of that, he is just an absolute pleasure to work with."</p>
+            <h6>Jonathon W., Coworker (Designer)</h6>
+        </article>
         <!-- <article>
             <p>""</p>
             <h6>June S., Band Leader</h6>
@@ -310,10 +314,6 @@
         <!-- <article>
             <p>""</p>
             <h6>Justin G., Mentor</h6>
-        </article> -->
-        <!-- <article>
-            <p>""</p>
-            <h6>Jonathon W., Coworker (Designer)</h6>
         </article> -->
     </section>
 
