--- a/index.html
+++ b/index.html
@@ -307,10 +307,10 @@
             <p>"Derek's enthusiasm and skill really raised the bar for design at Oracle Data Cloud. He's a fantastic designer and great relationship builder across the organization. On top of that, he is just an absolute pleasure to work with."</p>
             <h6>Jonathon W., Coworker (Designer)</h6>
         </article>
-        <!-- <article>
-            <p>""</p>
+        <article>
+            <p>"As a musician and an artist, I truly enjoy working with Derek because there is a trust that he radiates which can never be broken, even if the project takes a hard turn full of tension. He will walk right through the tension with you and give you a silent smile. That is the profounding cycle of creative drive he generates to invite collaborators into. It's comforting and assuring. It's the chemical reaction of doubtful challenges turned into kindred spirit, always ending up yielding something beautiful you did not expect."</p>
             <h6>June S., Band Leader</h6>
-        </article> -->
+        </article>
         <!-- <article>
             <p>""</p>
             <h6>Justin G., Mentor</h6>
