--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
         </article>
         <article>
             <h3>Recognition</h3>
-            <p>Creative inspiration and spiritual growth occur most when I listen to people who are different than myself share their stories. Recognition of privilege by way of race, class, and access to resources is necessary for me to acknowledge differing perspectives. I typically find this in music, podcasts, <a href="https://airtable.com/shr52R50xdteom7wb/tblM1ZiWwie8II77v" target="_blank" title="Sequoia">books</a>, film, and most of all, through engagement with others.</p>
+            <p>Creative inspiration and spiritual growth occur most when I listen to people who are different than myself share their stories. Recognition of privilege by way of race, class, and access to resources is necessary for me to acknowledge differing perspectives. I typically find this in music, podcasts, <a href="https://airtable.com/shr52R50xdteom7wb/tblM1ZiWwie8II77v" target="_blank" title="books">books</a>, film, and most of all, through engagement with others.</p>
         </article>
         <article>
             <h3>Studiousness</h3>
