--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
 
     <header>
         <h1>I’m Derek (he/him) — a designer, musician, and friend.</h1>
+        <p id="cmbmn">View all the ways in which I identify on my <a href="https://cmbmn.com/dt" alt="Call Me By My Name" target="_blank">Call Me By My Name</a>.</p>
         <nav>
             <div id="page-links">
                 <a href="#principles" title="Principles">Principles</a>
