--- a/index.html
+++ b/index.html
@@ -249,7 +249,7 @@
             </br>
             <p>I have played bass in a gogo band, guitar in a folk band, drums in a worship band, and now I produce my own music using electronic and analogous instruments.</p>
             </br>
-            <p>Currently, I am exploring how the influence of music from all over the world manifests through what I can create, with a project called <a href="https://linktr.ee/soundslikesequoia" target="_blank" title="Sequoia">Sequoia</a>.</p>
+            <p>Currently, I am exploring how the influence of music from all over the world manifests through what I can create, with a project called <a href="https://soundcloud.com/sequoiacommunity" target="_blank" title="Sequoia">Sequoia</a>.</p>
         </article>
         <article>
             <iframe width="100%" height="166" scrolling="no" frameborder="no" allow="autoplay" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/829084000&color=%23464a4c&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true"></iframe>
