changed music link

--- a/index.html
+++ b/index.html
@@ -247,7 +247,7 @@
         <article>
             <p>As a multi-instrumentalist, I enjoy trying to play anything I can. In 2019, I attended an online Music Theory course with Berklee College of Music, but much of my writing comes from what feels right and is not rooted in theory techniques.</p>
             </br>
-            <p>I have played bass in a gogo band, guitar in a folk band, drums in a worship band, and now I produce my own music using electronic and analogous instruments.</p>
+            <p>I have played bass in a gogo band, guitar in a folk band, drums in a worship band, and now I produce my own music using any instruments I can get my hands on.</p>
             </br>
             <p>Currently, I am exploring how the influence of music from all over the world manifests through what I can create, with a project called <a href="https://soundcloud.com/sequoiacommunity" target="_blank" title="Sequoia">Sequoia</a>.</p>
         </article>
