--- a/index.html
+++ b/index.html
@@ -38,8 +38,8 @@
     <h3>Building ways for everyone to self-identify on <a style="color:#8c00ff;" href="https://cmbmn.com/dt" target="_blank" title="Call Me By My Name">Call Me By My Name</a>.</h3>
     <p>Call Me By My Name (CMBMN) is profile page for people to proclaim their name pronunciation, preferred pronouns, personal identities, topic interests, and cause support.</p>
     </br></br>
-    <h3>Telling stories, expressing feeling, and protesting in <a style="color:#B4B678;" href="https://soundslikesequoia.bandcamp.com/" target="_blank" title="Sequoia">Sequoia</a>.</h3>
-    <p>Sequoia is an American hybrid jazz band and cross-genre co-op founded in 2018.</p>
+    <h3>Expressing stories in <a style="color:#B4B678;" href="https://derektorsani.bandcamp.com/" target="_blank" title="Music">Music</a>.</h3>
+    <p>Hybrid jazz band and cross-genre co-op.</p>
     </br></br>
     <h3>Helping folx obtain essential life documents with <a style="color:#FBBC05;" href="https://foundryumc.org/mercy" target="_blank" title="Imago Dei">Imago Dei</a>.</h3>
     <p>Imago Dei, or the ID Ministry at Foundry UMC, works with people in Washington, DC to get their social security card, birth certificate, identification, and more.</p>
