--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <link rel="stylesheet" href="styles/styles.css">
-    <link href="https://fonts.googleapis.com/css?family=Inter:500,900&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Inter:500,700&display=swap" rel="stylesheet">
     <link rel="shortcut icon" href="images/favicon.png" type="image/x-icon">
     <title>Derek Torsani</title>
     <!-- Global site tag (gtag.js) - Google Analytics -->
@@ -22,44 +22,85 @@
 <body>
 
 <div>
+    <div class="ticker-wrap">
+        <div class="ticker">
+          <a href="https://www.every.org/racial-justice" target="_blank" title="Donate to causes supporting racial justice" class="ticker__item">✊ Anti-Racisim</a>
+          <a href="https://www.every.org/racial-justice" target="_blank" title="Donate to causes supporting racial justice" class="ticker__item">🖤 Black Lives Matter</a>
+          <a href="https://www.every.org/indigenous-peoples" target="_blank" title="Donate to causes supporting indigenous peoples" class="ticker__item">🌎 This is Stolen Land</a>
+          <a href="https://www.every.org/lgbt" target="_blank" title="Donate to causes supporting the LGBTQ+ community" class="ticker__item">🏳️‍🌈 Love is Love</a>
+          <a href="https://www.every.org/search?q=immigration" target="_blank" title="Donate to causes supporting immigration" class="ticker__item">🇺🇸 No Human is Illegal</a>
+          <a href="https://www.every.org/humans" target="_blank" title="Donate to causes supporting human rights" class="ticker__item">❤️ Hate Has No Home Here</a>
+          <a href="https://www.every.org/research" target="_blank" title="Donate to causes supporting scientific research" class="ticker__item">🔬 Science is Real</a>
+          <a href="https://www.every.org/environment" target="_blank" title="Donate to causes supporting environmental justice" class="ticker__item">🌲 Environmental Justice</a>
+          <a href="https://www.every.org/animals" target="_blank" title="Donate to causes supporting animal rights" class="ticker__item">🐓 Animal Rights</a>
+        </div>
+    </div>
 
+    <img id="profile" src="images/favicon.png" alt="Photograph of a person with a large jacket on standing in front of a sky backdrop. It looks cold and feels windy."/>
+
+    <div class="spacer-8"></div>
     <h1>Derek Torsani</h1>
-    <h2>— multidisciplinary designer, multi-instrumentalist, and friend.</h2>
-    </br></br></br>
-    <h3>Shaping how people use design systems at <a style="color:#F45D48;" href="https://gusto.com/" target="_blank" title="Gusto">Gusto</a>.</h3>
-    <p>Gusto is an all-in-one people platform helping small businesses manage their payroll and benefits.</p>
-    </br></br>
-    <h3>Bringing visual access to music through <a style="color:#E37081;" href="https://soundcolorproject.com/" target="_blank" title="Sound Color Project">Sound Color Project</a>.</h3>
-    <p>Sound Color Project is a web experiment exploring the relationships between audible and visual spectrums using light, color, and texture.</p>
-    </br></br>
-    <h3>Enabling budgeting tools for humans worldwide on <a style="color:#0080FF;" href="https://halfdollar.org/" target="_blank" title="Halfdollar">Halfdollar</a>.</h3>
-    <p>Halfdollar is a spreadsheet budgeting template built for ease and collaboration.</p>
-    </br></br>
-    <h3>Building ways for everyone to self-identify on <a style="color:#8c00ff;" href="https://cmbmn.com/dt" target="_blank" title="Call Me By My Name">Call Me By My Name</a>.</h3>
-    <p>Call Me By My Name (CMBMN) is profile page for people to proclaim their name pronunciation, preferred pronouns, personal identities, topic interests, and cause support.</p>
-    </br></br>
-    <h3>Expressing stories in <a style="color:#B4B678;" href="https://derektorsani.bandcamp.com/" target="_blank" title="Music">Music</a>.</h3>
-    <p>Hybrid jazz band and cross-genre co-op.</p>
-    </br></br>
-    <h3>Helping folx obtain essential life documents with <a style="color:#FBBC05;" href="https://foundryumc.org/mercy" target="_blank" title="Imago Dei">Imago Dei</a>.</h3>
-    <p>Imago Dei, or the ID Ministry at Foundry UMC, works with people in Washington, DC to get their social security card, birth certificate, identification, and more.</p>
-    </br></br>
-    <h3>Bridging the gap between nonprofits and givers by volunteering with <a style="color:#00A37F;" href="https://every.org" target="_blank" title="Every.org">Every.org</a>.</h3>
-    <p>Every.org is a donation platform enabling givers to easily discover nonprofits and manage their one-time or recurring donations.</p>
-    </br></br>
-    <h3>Conducting mentorships with new designers on <a style="color:#FF6300;" href="https://www.outofofficehours.com/" target="_blank" title="Out of Office Hours">Out of Office Hours</a>.</h3>
-    <p>Out of Office Hours creates dialog between newcomers and people working in the tech industry.</p>
-    <h6>Principles —</h6>
-    </br>
-    <h4>Some principles I hold close are <span>honest</span> and <span>attentive communication</span>, <span>tangibility</span> of interaction with others, <span>altruistic giving</span> of myself, <span>recognition</span> and <span>respect</span> of differing perspectives, <span>studiousness</span> in practicing to progress, and always <span>genuine kindness</span>.</h4>
-    <h6>Elsewhere —</h6>
-    </br>
-    <a href="https://dribbble.com/dmtors" target="_blank" title="Dribbble">Dribbble</a> / <a href="https://medium.com/@dmtors" target="_blank" title="Medium">Medium</a> / <a href="https://twitter.com/dmtors" target="_blank" title="Twitter">Twitter</a> / <a href="https://www.linkedin.com/in/derektorsani/" target="_blank" title="LinkedIn">LinkedIn</a> / <a href="https://airtable.com/shr52R50xdteom7wb/tblM1ZiWwie8II77v" target="_blank" title="Reading Queue">Reading Queue</a>
-    <h6>Archive —</h6>
-    </br>
-    <a href="archive/v20.2.0/index.html" target="_blank" title="Version 20.2.0">v20.2.0</a> / <a href="archive/v20.1.0/index.html" target="_blank" title="Version 20.1.0">v20.1.0</a> / <a href="archive/v20.0.0/index.html" target="_blank" title="Version 20.0.0">v20.0.0</a> / <a href="archive/v19.0.0/index.html" target="_blank" title="Version 19.0.0">v19.0.0</a> / <a href="archive/v18.1.0/index.html" target="_blank" title="Version 18.1.0">v18.1.0</a> / <a href="archive/v18.0.0/index.html" target="_blank" title="Version 18.0.0">v18.0.0</a> / <a href="archive/v17.2.0/index.html" target="_blank" title="Version 17.2.0">v17.2.0</a> / <a href="archive/v17.1.0/index.html" target="_blank" title="Version 17.1.0">v17.1.0</a> / <a href="archive/v17.0.0/index.html" target="_blank" title="Version 17.0.0">v17.0.0</a>
-    </br></br></br></br>
-    <a href="derektorsani-resume.pdf" target="_blank" title="Resume">Résumé</a>
+    <h2>— musician and designer living in Washington, DC.</h2>
+    <div class="spacer-8"></div>
+
+    <h5>Personal principles —</h5>
+    <div class="spacer-1"></div>
+    <p>Be kind, listen, consider others, give more, practice makes progress.</p>
+    <div class="spacer-2"></div>
+
+    <p>"Let's change the way we eat, let's change the way we live, and let's change the way we treat each other."</p>
+    <div class="spacer-1"></div>
+    <h5>— Tupac Shakur, 1992</h5>
+    <div class="spacer-8"></div>
+
+    <h5>Music —</h5>
+    <div class="spacer-1"></div>
+    <p>Multi-instrumentalist, producer, and songwriter influenced by sounds from all over the world.</p>
+    <div class="spacer-1"></div>
+    <a class="link-hz" href="https://derektorsani.bandcamp.com/" target="_blank" title="Bandcamp">Bandcamp</a>
+    <a class="link-hz" href="https://soundcloud.com/derektorsani" target="_blank" title="SoundCloud">SoundCloud</a>
+    <div class="spacer-2"></div>
+    <p>Previous projects:</p>
+    <p>Intermission (Rnb) - Producer</p>
+    <p>Crank Cartel (Gogo) - Bass</p>
+    <p>Sweet Teej & The Shuffle (Beach Rock) - Bass</p>
+    <p>Multiple Church's (Worship & Praise) - Drums, Bass, Guitar</p>
+    <p>Rudder North (Folk) - Guitar, Percussion, Xylophone</p>
+    <p>For Better For Worse (Post Hardcore) - Electric Guitar</p>
+    <div class="spacer-8"></div>
+
+    <h5>Design —</h5>
+    <div class="spacer-1"></div>
+    <p>Systems and product designer currently building design systems at <a class="link" href="https://gusto.com/" target="_blank" title="Gusto">Gusto</a>.</p>
+    <div class="spacer-2"></div>
+    <p>Other projects:</p>
+    <p><a class="link" href="https://soundcolorproject.com/" target="_blank" title="Sound Color Project">Sound Color Project</a> - web experiment exploring the relationships between audible and visual spectrums using light, color, and texture.</p>
+    <p><a class="link" href="https://halfdollar.org/" target="_blank" title="Halfdollar">Halfdollar</a> - spreadsheet budgeting template built for ease and collaboration.</p>
+    <p><a class="link" href="https://cmbmn.com/dt" target="_blank" title="Call Me By My Name">Call Me By My Name</a> - profile page for people to proclaim their name pronunciation, personal pronouns, personal identities, topic interests, and cause support.</p>
+    <p><a class="link" href="https://weiigh.com/" target="_blank" title="Weiigh">Weiigh</a> - tool to help make choices based on what’s important to you and how the factors in your decisions weigh against one another.</p>
+    <div class="spacer-8"></div>
+
+    <h5>Volunteer —</h5>
+    <div class="spacer-1"></div>
+    <p>With the gift of privilege comes the responsibility to use it to take care of others. I'm fortunate to be able to do this through giving of my time and resources.</p>
+    <div class="spacer-2"></div>
+    <p>Efforts:</p>
+    <p>Helping folx obtain essential life documents with <a class="link" href="https://foundryumc.org/mercy" target="_blank" title="Imago Dei">Imago Dei</a>.</p>
+    <p>Bridging the gap between nonprofits and givers by volunteering with <a class="link" href="https://every.org" target="_blank" title="Every.org">Every.org</a>.</p>
+    <p>Connecting with new designers on <a class="link" href="https://www.outofofficehours.com/" target="_blank" title="Out of Office Hours">Out of Office Hours</a>.</p>
+    <div class="spacer-8"></div>
+
+    <h5>Elsewhere —</h5>
+    <div class="spacer-1"></div>
+    <p><a class="link" href="https://instagram.com/derektorsani" target="_blank" title="Instagram">Instagram</a> / <a class="link" href="https://dribbble.com/dmtors" target="_blank" title="Dribbble">Dribbble</a> / <a class="link" href="https://medium.com/@dmtors" target="_blank" title="Medium">Medium</a> / <a class="link" href="https://twitter.com/dmtors" target="_blank" title="Twitter">Twitter</a> / <a class="link" href="https://www.linkedin.com/in/derektorsani/" target="_blank" title="LinkedIn">LinkedIn</a> / <a class="link" href="https://airtable.com/shr52R50xdteom7wb/tblM1ZiWwie8II77v" target="_blank" title="Reading Queue">Reading Queue</a></p>
+    <div class="spacer-8"></div>
+
+    <h5>Archive —</h5>
+    <div class="spacer-1"></div>
+    <p><a class="link" href="archive/v20.2.0/index.html" target="_blank" title="Version 20.2.0">v20.2.0</a> / <a class="link" href="archive/v20.1.0/index.html" target="_blank" title="Version 20.1.0">v20.1.0</a> / <a class="link" href="archive/v20.0.0/index.html" target="_blank" title="Version 20.0.0">v20.0.0</a> / <a class="link" href="archive/v19.0.0/index.html" target="_blank" title="Version 19.0.0">v19.0.0</a> / <a class="link" href="archive/v18.1.0/index.html" target="_blank" title="Version 18.1.0">v18.1.0</a> / <a class="link" href="archive/v18.0.0/index.html" target="_blank" title="Version 18.0.0">v18.0.0</a> / <a class="link" href="archive/v17.2.0/index.html" target="_blank" title="Version 17.2.0">v17.2.0</a> / <a class="link" href="archive/v17.1.0/index.html" target="_blank" title="Version 17.1.0">v17.1.0</a> / <a class="link" href="archive/v17.0.0/index.html" target="_blank" title="Version 17.0.0">v17.0.0</a></p>
+    <div class="spacer-8"></div>
+
+    <a class="link" href="derektorsani-resume.pdf" target="_blank" title="Resume">Résumé</a>
 </div>
 
 </body>
