--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
     <div class="spacer-1"></div>
     <p>Multi-instrumentalist, producer, and songwriter influenced by sounds from all over the world.</p>
     <div class="spacer-1"></div>
-    <p><a class="link-hz" href="https://open.spotify.com/artist/73mWdu0S5IfY7ReJ3V7JFv" target="_blank" title="Spotify">Spotify</a> / <a class="link-hz" href="https://derektorsani.bandcamp.com/" target="_blank" title="Bandcamp">Bandcamp</a> / <a class="link-hz" href="https://soundcloud.com/derektorsani" target="_blank" title="SoundCloud">SoundCloud</a></p>
+    <p><a class="link" href="https://open.spotify.com/artist/73mWdu0S5IfY7ReJ3V7JFv" target="_blank" title="Spotify">Spotify</a> / <a class="link" href="https://derektorsani.bandcamp.com/" target="_blank" title="Bandcamp">Bandcamp</a> / <a class="link" href="https://soundcloud.com/derektorsani" target="_blank" title="SoundCloud">SoundCloud</a></p>
     <div class="spacer-2"></div>
     <p>Previous projects:</p>
     <p>Intermission (Rnb) - Producer</p>
