--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
     <div class="spacer-1"></div>
     <p>Multi-instrumentalist, producer, and songwriter influenced by sounds from all over the world.</p>
     <div class="spacer-1"></div>
-    <p><a class="link" href="https://open.spotify.com/artist/73mWdu0S5IfY7ReJ3V7JFv" target="_blank" title="Spotify">Spotify</a> / <a class="link" href="https://derektorsani.bandcamp.com/" target="_blank" title="Bandcamp">Bandcamp</a> / <a class="link" href="https://soundcloud.com/derektorsani" target="_blank" title="SoundCloud">SoundCloud</a></p>
+    <p><a class="link" href="https://open.spotify.com/artist/73mWdu0S5IfY7ReJ3V7JFv" target="_blank" title="Spotify">Spotify</a> / <a class="link" href="https://music.apple.com/us/artist/derek-torsani/1546729491" target="_blank" title="Apple Music">Apple Music</a> / <a class="link" href="https://listen.tidal.com/artist/22826223" target="_blank" title="Tidal">Tidal</a> / <a class="link" href="https://music.amazon.com/artists/B08RJWNQ5J/derek-torsani" target="_blank" title="Amazon Music">Amazon Music</a> / <a class="link" href="https://derektorsani.bandcamp.com/" target="_blank" title="Bandcamp">Bandcamp</a> / <a class="link" href="https://soundcloud.com/derektorsani" target="_blank" title="SoundCloud">SoundCloud</a></p>
     <div class="spacer-2"></div>
     <p>Previous projects:</p>
     <p>Intermission (Rnb) - Producer</p>
