edited donation links

--- a/index.html
+++ b/index.html
@@ -24,15 +24,15 @@
 <div>
     <div class="ticker-wrap">
         <div class="ticker">
-          <a href="https://www.every.org/racial-justice" target="_blank" title="Donate to causes supporting racial justice" class="ticker__item">✊  Anti-Racisim</a>
-          <a href="https://www.every.org/racial-justice" target="_blank" title="Donate to causes supporting racial justice" class="ticker__item">🖤  Black Lives Matter</a>
-          <a href="https://www.every.org/indigenous-peoples" target="_blank" title="Donate to causes supporting indigenous peoples" class="ticker__item">🌎  This is Stolen Land</a>
-          <a href="https://www.every.org/lgbt" target="_blank" title="Donate to causes supporting the LGBTQ+ community" class="ticker__item">🏳️‍🌈  Love is Love</a>
-          <a href="https://www.every.org/search?q=immigration" target="_blank" title="Donate to causes supporting immigration" class="ticker__item">🇺🇸  No Human is Illegal</a>
-          <a href="https://www.every.org/humans" target="_blank" title="Donate to causes supporting human rights" class="ticker__item">❤️  Hate Has No Home Here</a>
-          <a href="https://www.every.org/research" target="_blank" title="Donate to causes supporting scientific research" class="ticker__item">🔬  Science is Real</a>
-          <a href="https://www.every.org/environment" target="_blank" title="Donate to causes supporting environmental justice" class="ticker__item">🌲  Environmental Justice</a>
-          <a href="https://www.every.org/animals" target="_blank" title="Donate to causes supporting animal rights" class="ticker__item">🐓  Animal Rights</a>
+          <a href="https://www.every.org/racial-justice" target="_blank" title="Donate to causes supporting racial justice" class="ticker__item"><span>✊</span>Anti-Racisim</a>
+          <a href="https://www.every.org/racial-justice" target="_blank" title="Donate to causes supporting racial justice" class="ticker__item"><span>🖤</span>Black Lives Matter</a>
+          <a href="https://www.every.org/indigenous-peoples" target="_blank" title="Donate to causes supporting indigenous peoples" class="ticker__item"><span>🌎</span>This is Stolen Land</a>
+          <a href="https://www.every.org/lgbt" target="_blank" title="Donate to causes supporting the LGBTQ+ community" class="ticker__item"><span>🏳️‍🌈</span>Love is Love</a>
+          <a href="https://www.every.org/search?q=immigration" target="_blank" title="Donate to causes supporting immigration" class="ticker__item"><span>🇺🇸</span>No Human is Illegal</a>
+          <a href="https://www.every.org/humans" target="_blank" title="Donate to causes supporting human rights" class="ticker__item"><span>❤️</span>Hate Has No Home Here</a>
+          <a href="https://www.every.org/research" target="_blank" title="Donate to causes supporting scientific research" class="ticker__item"><span>🔬</span>Science is Real</a>
+          <a href="https://www.every.org/environment" target="_blank" title="Donate to causes supporting environmental justice" class="ticker__item"><span>🌲</span>Environmental Justice</a>
+          <a href="https://www.every.org/animals" target="_blank" title="Donate to causes supporting animal rights" class="ticker__item"><span>🐓</span>Animal Rights</a>
         </div>
     </div>
 
