edited principle styles

--- a/index.html
+++ b/index.html
@@ -45,8 +45,14 @@
 
     <h5>Personal principles —</h5>
     <div class="spacer-1"></div>
-    <p>Be kind, listen, consider others, give more, practice makes progress.</p>
-    <div class="spacer-2"></div>
+    <ul>
+        <li>be kind</li>
+        <li>listen</li>
+        <li>consider others</li>
+        <li>give more</li>
+        <li>practice makes progress</li>
+    </ul>
+    <div class="spacer-4"></div>
 
     <p>"Let's change the way we eat, let's change the way we live, and let's change the way we treat each other."</p>
     <div class="spacer-1"></div>
@@ -60,7 +66,6 @@
     <p><a class="link" href="https://open.spotify.com/artist/73mWdu0S5IfY7ReJ3V7JFv" target="_blank" title="Spotify">Spotify</a> / <a class="link" href="https://music.apple.com/us/artist/derek-torsani/1546729491" target="_blank" title="Apple Music">Apple Music</a> / <a class="link" href="https://listen.tidal.com/artist/22826223" target="_blank" title="Tidal">Tidal</a> / <a class="link" href="https://music.amazon.com/artists/B08RJWNQ5J/derek-torsani" target="_blank" title="Amazon Music">Amazon Music</a> / <a class="link" href="https://derektorsani.bandcamp.com/" target="_blank" title="Bandcamp">Bandcamp</a> / <a class="link" href="https://soundcloud.com/derektorsani" target="_blank" title="SoundCloud">SoundCloud</a></p>
     <div class="spacer-2"></div>
     <p>Previous projects:</p>
-    <p>Intermission (Rnb) - Producer</p>
     <p>Crank Cartel (Gogo) - Bass</p>
     <p>Sweet Teej & The Shuffle (Beach Rock) - Bass</p>
     <p>Multiple Church's (Worship & Praise) - Drums, Bass, Guitar</p>
