--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
     <p>Efforts:</p>
     <p>Helping folx obtain essential life documents with <a class="link" href="https://foundryumc.org/mercy" target="_blank" title="Imago Dei">Imago Dei</a>.</p>
     <p>Bridging the gap between nonprofits and givers by volunteering with <a class="link" href="https://every.org" target="_blank" title="Every.org">Every.org</a>.</p>
-    <p>Connecting with new designers on <a class="link" href="https://www.outofofficehours.com/" target="_blank" title="Out of Office Hours">Out of Office Hours</a>.</p>
+    <p>Connecting with people on <a class="link" href="https://superpeer.com/dt" target="_blank" title="Superpeer">Superpeer</a>, <a class="link" href="https://adplist.org/mentors/derek-torsani" target="_blank" title="ADP List">ADP List</a>, and <a class="link" href="https://www.outofofficehours.com/" target="_blank" title="Out of Office Hours">Out of Office Hours</a>.</p>
     <div class="spacer-8"></div>
 
     <h5>Elsewhere —</h5>
