added speaking engagements

--- a/index.html
+++ b/index.html
@@ -94,6 +94,19 @@
     <p>Connecting with people on <a class="link" href="https://superpeer.com/dt" target="_blank" title="Superpeer">Superpeer</a>, <a class="link" href="https://adplist.org/mentors/derek-torsani" target="_blank" title="ADP List">ADP List</a>, and <a class="link" href="https://www.outofofficehours.com/" target="_blank" title="Out of Office Hours">Out of Office Hours</a>.</p>
     <div class="spacer-8"></div>
 
+    <h5>Speaking —</h5>
+    <div class="spacer-1"></div>
+    <p>I'm thankful to have been able to speak about my work to many different people.</p>
+    <div class="spacer-2"></div>
+    <p>Engagements:</p>
+    <!-- <p>Figma MeetUp Ukraine, Friends of Figma Lviv, 2021</p> -->
+    <p>Sound Color Project, Sound Scene & Hirshhorn, 2020</p>
+    <p>Designing Systems with Others, NOVA UX, 2019</p>
+    <p>Animating SVG, Hackital, 2017</p>
+    <p>Design Disrupters Representative, Washington, DC, 2016</p>
+    <p>Humor in Design, Maryland Institute College of Art, 2011</p>
+    <div class="spacer-8"></div>
+
     <h5>Elsewhere —</h5>
     <div class="spacer-1"></div>
     <p><a class="link" href="https://instagram.com/derektorsani" target="_blank" title="Instagram">Instagram</a> / <a class="link" href="https://dribbble.com/dmtors" target="_blank" title="Dribbble">Dribbble</a> / <a class="link" href="https://medium.com/@dmtors" target="_blank" title="Medium">Medium</a> / <a class="link" href="https://twitter.com/dmtors" target="_blank" title="Twitter">Twitter</a> / <a class="link" href="https://www.linkedin.com/in/derektorsani/" target="_blank" title="LinkedIn">LinkedIn</a> / <a class="link" href="https://airtable.com/shr52R50xdteom7wb/tblM1ZiWwie8II77v" target="_blank" title="Reading Queue">Reading Queue</a></p>
