--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 
     <div class="spacer-8"></div>
     <h1>Derek Torsani</h1>
-    <h2>— musician and designer living in Washington, DC.</h2>
+    <h2>— musician and designer living in Baltimore, Maryland.</h2>
     <div class="spacer-8"></div>
 
     <h5>Personal principles —</h5>
@@ -99,7 +99,7 @@
     <p>I'm thankful to have been able to speak about my work to many different people.</p>
     <div class="spacer-2"></div>
     <p>Engagements:</p>
-    <!-- <p>Figma MeetUp Ukraine, Friends of Figma Lviv, 2021</p> -->
+    <p>Tools and Approaches for Design System Teams, Friends of Figma Lviv, 2021</p>
     <p>Sound Color Project, Sound Scene & Hirshhorn, 2020</p>
     <p>Designing Systems with Others, NOVA UX, 2019</p>
     <p>Animating SVG, Hackital, 2017</p>
